@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 #
 # opcontrol is a script to control OProfile
 # opcontrol --help and opcontrol --list-events have info
@@ -7,12 +7,8 @@
 # Read the file COPYING
 #
 # Authors: John Levon, Philippe Elie, Will Cohen
-
-# ensure bash2
-if test "`echo $BASH_VERSION | cut -b1`" -lt 2; then
-	exec /bin/bash2 $0 $@
-fi
- 
+#
+# NOTE: This script should be as shell independent as possible
 
 SYSCTL=do_sysctl
 
@@ -292,6 +288,16 @@ create_dir()
 	fi
 }
 
+get_event()
+{
+	GOTEVENT=`eval "echo \\$CHOSEN_EVENTS_$1"`
+}
+
+set_event()
+{
+	eval "CHOSEN_EVENTS_$1=$2"
+}
+
 
 # save all the setup related information
 do_save_setup()
@@ -304,7 +310,8 @@ do_save_setup()
 
 	if test "$NR_CHOSEN" != "0"; then
 		for f in `seq 0 $((NR_CHOSEN - 1))`; do
-			echo "CHOSEN_EVENTS[${f}]=${CHOSEN_EVENTS[$f]}" >>$SETUP_FILE
+			get_event $f
+			echo "CHOSEN_EVENTS_${f}=$GOTEVENT" >>$SETUP_FILE
 		done
 	fi
  
@@ -480,8 +487,9 @@ verify_counters()
 
 	if test "$NR_CHOSEN" != 0; then
 		for f in `seq 0 $((NR_CHOSEN - 1))`; do
-			if test "${CHOSEN_EVENTS[$f]}" != ""; then
-				OPHELP_ARGS="$OPHELP_ARGS ${CHOSEN_EVENTS[$f]}"
+			get_event $f
+			if test "$GOTEVENT" != ""; then
+				OPHELP_ARGS="$OPHELP_ARGS $GOTEVENT"
 			fi
 		done
 
@@ -501,16 +509,17 @@ normalise_events()
 	fi
 
 	for f in `seq 0 $((NR_CHOSEN - 1))`; do
-		if test "${CHOSEN_EVENTS[$f]}" != ""; then
-			EVENT=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $1}'`
+		get_event $f
+		if test "$GOTEVENT" != ""; then
+			EVENT=`echo $GOTEVENT | awk -F: '{print $1}'`
 			EVENT_VAL=`$OPHELP $EVENT`
 			if test "$?" != 0; then
 				exit 1
 			fi
-			COUNT=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $2}'`
-			UNIT_MASK=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $3}'`
-			KERNEL=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $4}'`
-			USER=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $5}'`
+			COUNT=`echo $GOTEVENT | awk -F: '{print $2}'`
+			UNIT_MASK=`echo $GOTEVENT | awk -F: '{print $3}'`
+			KERNEL=`echo $GOTEVENT | awk -F: '{print $4}'`
+			USER=`echo $GOTEVENT | awk -F: '{print $5}'`
 			if test -z "$UNIT_MASK"; then
 				TMPEVENT="$EVENT:$COUNT"
 				UNIT_MASK=`$OPHELP --unit-mask $TMPEVENT`
@@ -525,7 +534,7 @@ normalise_events()
 				USER=1
 			fi
 
-			CHOSEN_EVENTS[$f]=$EVENT:$COUNT:$UNIT_MASK:$KERNEL:$USER
+			set_event $f "$EVENT:$COUNT:$UNIT_MASK:$KERNEL:$USER"
 		fi
 	done
 }
@@ -670,7 +679,7 @@ do_options()
 				if test "$val" = "default"; then
 					val=$DEFAULT_EVENT
 				fi
-				CHOSEN_EVENTS[$NR_CHOSEN]=$val
+				set_event $NR_CHOSEN "$val"
 				NR_CHOSEN=`expr $NR_CHOSEN + 1`
 				DO_SETUP=yes
 				;;
@@ -993,10 +1002,10 @@ do_param_setup()
 
 	# use the default setup if none set
 	if test "$NR_CHOSEN" = 0; then
-		CHOSEN_EVENTS[0]=$DEFAULT_EVENT
+		set_event 0 $DEFAULT_EVENT
 		NR_CHOSEN=1
 		HW_CTRS=`$OPHELP --check-events $DEFAULT_EVENT --callgraph=$CALLGRAPH`
-		echo "Using default event: ${CHOSEN_EVENTS[0]}"
+		echo "Using default event: $DEFAULT_EVENT"
 	fi
 
 	# Necessary in this case :
@@ -1011,17 +1020,18 @@ do_param_setup()
 
 	OPROFILED_EVENTS=
 	for f in `seq 0 $((NR_CHOSEN - 1))`; do
-		if test "${CHOSEN_EVENTS[$f]}" != ""; then
-			EVENT=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $1}'`
+		get_event $f
+		if test "$GOTEVENT" != ""; then
+			EVENT=`echo $GOTEVENT | awk -F: '{print $1}'`
 			EVENT_STR=`$OPHELP $EVENT`
 			# For some architectures, additional information associated with given
 			# event is returned in EVENT_STR, so we validate this information if necessary
 			check_event_mapping_data
 			EVENT_VAL=`echo $EVENT_STR | awk '{print $1}'`
-			COUNT=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $2}'`
-			UNIT_MASK=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $3}'`
-			KERNEL=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $4}'`
-			USER=`echo ${CHOSEN_EVENTS[$f]} | awk -F: '{print $5}'`
+			COUNT=`echo $GOTEVENT | awk -F: '{print $2}'`
+			UNIT_MASK=`echo $GOTEVENT | awk -F: '{print $3}'`
+			KERNEL=`echo $GOTEVENT | awk -F: '{print $4}'`
+			USER=`echo $GOTEVENT | awk -F: '{print $5}'`
 			CTR=`echo $HW_CTRS | awk "{print \\$$((f + 1))}"`
 
 			if test "$EVENT" = "RTC_INTERRUPTS"; then
@@ -1137,7 +1147,8 @@ do_status()
 
 	if test "$NR_CHOSEN" != "0"; then
 		for f in `seq 0 $((NR_CHOSEN - 1))`; do
-			echo "Event 0: ${CHOSEN_EVENTS[$f]}"
+			get_event $f
+			echo "Event $f: $GOTEVENT"
 		done
 	fi
  
